--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
         <link rel="stylesheet" href="styles/sanitize.css">
         <link rel="stylesheet" href="styles/style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>Google</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
