March 16 Update #1: • Completed First Version

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <nav id="nav-header">
                 <div id="left-nav">
                     <ul class="nav">
-                        <li><a href="https://about.google/?fg=1&utm_source=google-CA&utm_medium=referral&utm_campaign=hp-header" target=blank>About</a></li>
+                        <li><a href="https://about.google/?fg=1&utm_source=google-CA&utm_medium=referral&utm_campaign=hp-header" target=blank id="nav-about">About</a></li>
                         <li><a href="https://store.google.com/CA?utm_source=hp_header&utm_medium=google_ooo&utm_campaign=GS100042&hl=en-CA" target=blank>Store</a></li>
                     </ul>
                 </div>
                 <div id="right-nav">
                     <ul class="nav">
-                        <li><a href="https://mail.google.com/mail/?authuser=0&ogbl" target=blank>Gmail</a></li>
+                        <li><a href="https://mail.google.com/mail/?authuser=0&ogbl" target=blank id="nav-gmail">Gmail</a></li>
                         <li><a href="https://www.google.ca/imghp?hl=en&authuser=0&ogbl" target=blank>Images</a></li>
                         <li><a href="https://gsuite.google.com/marketplace/?pann=gam" target=blank><i class="material-icons apps-icon">apps</i></a></li>
                         <li><a href="https://accounts.google.com/SignOutOptions?hl=en&continue=https://www.google.com/" target=blank><img src="images/google-avatar.jpeg" id="avatar" alt="Google Avatar"></a></li>
@@ -27,6 +27,7 @@
             </nav>
         </header>
         <main>
+            <div id="form-area">
             <img src="images/googlelogo_color_272x92dp.png" id="google-logo" alt="Google Logo">
             <form class="search" action="#">
                 <div class="search-container">
@@ -46,6 +47,7 @@
                 <input type="button" class="button" id="lucky-button" value="I'm Feeling Lucky" aria-label="I'm Feeling Lucky">
                 </div>
             </form>
+            </div>
             <p class="paragraph-body">Google offered in: <a href="https://www.google.com/setprefs?sig=0_6dMveHY244nYf_lwVEtwNODZssw%3D&hl=fr&source=homepage&sa=X&ved=0ahUKEwjWkNP14K7vAhXEHM0KHfUFBwIQ2ZgBCBA" id="francais">Français</a></p>
         </main>
         <footer>
